# PyProxySwitch

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  PyProxySwitch.py  README  README.md  README_EN.txt  README_zh_CN.txt  pps_cxfreeze.py  pyproject.toml  requirements.txt  scp_file_release.sh  setup.py
.github/workflows/: mirror-sourceforge.yml  test.yml
PyProxySwitch/: README_EN.txt  README_zh_CN.txt
PyProxySwitch/cfg/: PPS.conf  proxy.txt  proxy.txt.example
PyProxySwitch/cfg/3proxy/: NoProxy.conf  test_auth.conf  test_http.conf  test_ip.conf  test_socks.conf
PyProxySwitch/cfg/polipo/: NoProxy.conf  test_auth.conf  test_http.conf  test_ip.conf  test_socks.conf
PyProxySwitch/i18n/: en.qm  en.ts  make_qm.bat  pps.pro  pps_config.pot  zh_CN.qm  zh_CN.ts
PyProxySwitch/i18n/en/LC_MESSAGES/: pps_config.po
PyProxySwitch/i18n/zh_CN/LC_MESSAGES/: pps_config.mo  pps_config.po
PyProxySwitch/licenses/: LICENSE.txt
PyProxySwitch/res/: add_proxy.ui  add_proxy_ui.py  makeui.bat  pps_conf.ui  pps_conf_ui.py  pps_qrc.py
PyProxySwitch/src/: PyProxySwitch.pyw  pps_config.py
cfg/: PPS.conf  PPS.conf.example  proxy.txt  proxy.txt.example
cfg/3proxy/: NoProxy.conf  test_auth.conf  test_http.conf  test_http_auth.conf  test_ip.conf  test_socks.conf
cfg/polipo/: NoProxy.conf.example  test_auth.conf  test_http.conf  test_http_auth.conf  test_ip.conf  test_socks.conf
i18n/: en.qm  en.ts  make_pot.bat  make_qm.bat  make_ts.bat  pps.pro  pps_config.pot  regenerate_en_ts.py  zh_CN.qm  zh_CN.ts
i18n/en/LC_MESSAGES/: pps_config.mo
licenses/: COPYING_3proxy  LICENSE.txt
pyproxyswitch/: __init__.py  __main__.py  _version.py  atomic_write.py  config.py  errors.py  logger_config.py  main.py  native_proxy.py  paths.py  pps_config.py  proxy_list.py  proxy_manager.py  proxy_validation.py
pyproxyswitch/data/: __init__.py
pyproxyswitch/data/defaults/: PPS.conf  proxy.txt
pyproxyswitch/data/i18n/: en.qm  zh_CN.qm
pyproxyswitch/gui/: __init__.py  add_proxy_dialog.py  batch_import_dialog.py  config_dialog.py  delegates.py  main_window.py
pyproxyswitch/resources/: __init__.py  add_proxy_ui.py  makeui.bat  pps_conf.ui  pps_conf_ui.py  pps_qrc.py
res/: __init__.py  add_proxy.ui  add_proxy_ui.py  pps_conf.ui  pps_conf_ui.py
src/: PyProxySwitch.pyw  __init__.py  config.py  errors.py  logger_config.py  main.py  pps_config.py  proxy_manager.py  proxy_validation.py
src/gui/: __init__.py  add_proxy_dialog.py  batch_import_dialog.py  config_dialog.py  delegates.py  main_window.py
tests/: README.md  __init__.py  conftest.py  test_add_proxy_dialog.py  test_add_proxy_dialog_simple.py  test_cli.py  test_config_coverage.py  test_config_dialog_buttons.py  test_config_dialog_buttons_fixed.py  test_config_final_coverage.py  test_config_manager.py  test_config_manager_comprehensive.py  test_errors.py  test_generate_ui.py  test_gui_regressions.py  test_logger_config.py  test_logger_config_comprehensive.py  test_main.py  test_main_business_logic.py  test_main_coverage.py  test_main_gui_logic.py  test_main_integration.py  test_main_module.py  test_main_module_simple.py  test_native_proxy.py  test_pps_config.py  test_pps_config_comprehensive.py  test_pps_config_coverage.py  test_proxy_list.py  test_proxy_manager.py  test_proxy_validation.py
tests/fixtures/: sample_config.json  sample_proxy.txt  test_config.json
tools/: generate_i18n.py  generate_ui.py
