[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyProxySwitch"
dynamic = ["version"]
description = "A cross-platform proxy switcher with a native Python HTTP/SOCKS server"
authors = [
    {name = "Kder Lin", email = "kderlin@gmail.com"}
]
license = "Apache-2.0"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["proxy", "network", "tool"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: System :: Networking",
]

dependencies = [
    "PySide6>=6.5.0",
    "platformdirs>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-qt>=4.2.0",
    "mypy>=1.0.0",
    "ruff>=0.3.0",
    "black>=24.0.0",
    "pre-commit>=3.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = '''
    --verbose 
    --ignore=tests/test_main.py 
    --ignore=tests/test_main_gui_logic.py 
    --ignore=tests/test_add_proxy_dialog.py 
    --ignore=tests/test_config_dialog_buttons.py 
    --ignore=tests/test_config_dialog_buttons_fixed.py 
    --ignore=tests/test_main_module.py 
    --ignore=tests/test_main_module_simple.py 
    --ignore=tests/test_pps_config_coverage.py'''
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["pyproxyswitch"]
branch = true
omit = [
    "tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
ignore_errors = true

[project.urls]
Homepage = "http://pyproxyswitch.kder.info"
Repository = "https://github.com/kderlin/PyProxySwitch"
"Bug Reports" = "https://github.com/kderlin/PyProxySwitch/issues"

[project.gui-scripts]
pyproxyswitch = "pyproxyswitch.main:main"

[project.scripts]
pyproxyswitch-cli = "pyproxyswitch.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["pyproxyswitch*"]

[tool.setuptools.dynamic]
version = {attr = "pyproxyswitch._version.__version__"}

[tool.setuptools.package-data]
"pyproxyswitch.data" = [
    "defaults/*",
    "i18n/*.qm",
    "i18n/*/LC_MESSAGES/*.mo",
]
"pyproxyswitch.resources" = ["*.ui", "*.bat"]

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.claude
  | _build
  | buck-out
  | build
  | dist
  | utils
  | __pycache__
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "N802",  # function name should be lowercase (Qt convention)
]

[tool.ruff.lint.isort]
known-first-party = ["pyproxyswitch"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
